# swagger_output.json
@@ -1801,6 +1801,14 @@
           }
         }
       }
+    },
+    "/api/mail/": {
+      "post": {
+        "tags": [],
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
     }
   },
   "definitions": {}
